// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ad data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`adosc data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "slowk_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`adx data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`adxr data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`apo data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`aroon data works 1`] = `
Object {
  "data": Array [
    Object {
      "aroon_down": "Float",
      "aroon_up": "Float",
      "date": "Date",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`aroonosc data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`atr data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`bbands data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "real_lower_band": "Float",
      "real_middle_band": "Float",
      "real_upper_band": "Float",
    },
  ],
  "deviation_multiplier_for_lower_band": "Float",
  "deviation_multiplier_for_upper_band": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`bop data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`cci data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`cmo data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`dema data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`dx data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`ema data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`ht_dcperiod data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`ht_dcphase data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`ht_phasor data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "phase": "Float",
      "quadrature": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`ht_sine data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "lead_sine": "Float",
      "sine": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`ht_trendline data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`ht_trendmode data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`kama data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`macd data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "macd": "Float",
      "macd_hist": "Float",
      "macd_signal": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "signal_period": "Float",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`macdext data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "macd": "Float",
      "macd_hist": "Float",
      "macd_signal": "Float",
    },
  ],
  "fast_ma_type": "Float",
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "signal_ma_type": "Float",
  "signal_period": "Float",
  "slow_ma_type": "Float",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`mama data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fama": "Float",
      "mama": "Float",
    },
  ],
  "fast_limit": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "slow_limit": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`mfi data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`midpoint data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`midprice data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`minus_di data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`minus_dm data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`mom data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`natr data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`obv data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`plus_di data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`plus_dm data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`ppo data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`roc data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`rocr data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`rsi data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`sar data works 1`] = `
Object {
  "acceleration": "Float",
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "maximum": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`sma data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`stoch data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "slowd": "Float",
      "slowk": "Float",
    },
  ],
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "slowd_ma_type": "Float",
  "slowd_period": "Float",
  "slowk_ma_type": "Float",
  "slowk_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`stochf data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fastd": "Float",
      "fastk": "Float",
    },
  ],
  "fastd_ma_type": "Float",
  "fastd_period": "Float",
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`stochrsi data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fastd": "Float",
      "fastk": "Float",
    },
  ],
  "fastd_ma_type": "Float",
  "fastd_period": "Float",
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`t3 data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
  "volume_factor_vfactor": "Float",
}
`;

exports[`tema data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`trange data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`trima data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`trix data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`ultosc data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`vwap data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`willr data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`wma data works 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;
